--- a/Automation/DM/index.html
+++ b/Automation/DM/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@1,600&display=swap">
          <!-- Custom styles for this template -->
-         <link href="/css/style.css" rel="stylesheet"> 
+         <link href="../css/style.css" rel="stylesheet"> 
      </head>
      <body class="bg-grad">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
