--- a/Automation/DM/index.html
+++ b/Automation/DM/index.html
@@ -22,7 +22,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
     
-        <div class="navbar-collapse collapse" id="navbarColor01" style="">
+        <div class="navbar-collapse collapse" id="navbarColor01" >
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
@@ -167,7 +167,7 @@
          </div>
      </div>
     </div>
-         </div><!-- /.container -->
+
 
          <!-- Bootstrap core JavaScript
          ================================================== -->
