--- a/Automation/DM/index.html
+++ b/Automation/DM/index.html
@@ -12,8 +12,37 @@
         
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@1,600&display=swap">
-         <!-- Custom styles for this template -->
-         <link href="../css/style.css" rel="stylesheet"> 
+         <style>
+           * {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family:  'Montserrat', sans-serif;
+}
+
+.featurette-heading, .navbar-brand {
+	font-family:  'Poppins', sans-serif;
+}
+
+.bg-grad {
+	background-color: #f0f0f0;
+}
+
+.featurette-heading {
+	text-align: center;
+}
+.container .btn {
+	margin-bottom: 10px;
+	border-radius: 60px
+}
+
+.container .btn:hover {
+	font-weight: bold;
+}
+.navbar .btn {
+	margin: 4px;
+}
+         </style>
      </head>
      <body class="bg-grad">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
