--- a/Automation/DM/index.html
+++ b/Automation/DM/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="../about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="colorpicker/color.html">Color Picker&copy;</a>
+              <a class="nav-link" href="../colorpicker/color.html">Color Picker&copy;</a>
             </li>
           </ul>
         </div>
