--- a/story/index.html
+++ b/story/index.html
@@ -47,6 +47,7 @@
     appId: "1:259152173161:web:65b3c9b2a212f589b92af8",
     measurementId: "G-GMT12B0L63"
   };
+  firebase.initializeApp(firebaseConfig);
 </script>
 <script src="js/auth.js"></script>
 </body>
