--- a/Automation/DM/index.html
+++ b/Automation/DM/index.html
@@ -80,7 +80,7 @@
         <div class="accordion accordion-gap" id="accordionFAQ">
           <div class="accordion-item wow fadeInRight">
             <div class="accordion-trigger" id="headOne">
-              <button class="btn collapsed btn-dark btn-lg btn-block" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">Group</button>
+              <button class="btn collapsed btn-dark btn-lg btn-block" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">Groups</button>
             </div>
         </div>
             <div id="collapse1" class="collapse" aria-labelledby="headOne" data-parent="#accordionFAQ">
@@ -118,9 +118,27 @@
                  <div id="live1" class="collapse">
                    <a href="#" class="btn btn-success btn-lg btn-block" type="button">Performer of the Day</a>
                  </div>
+                 <div id="live1" class="collapse">
+                  <a href="#" class="btn btn-success btn-lg btn-block" type="button">English Triva</a>
+                </div>
+                <div id="live1" class="collapse">
+                  <a href="#" class="btn btn-success btn-lg btn-block" type="button">Reaction Quiz</a>
+                </div>
+                <div id="live1" class="collapse">
+                  <a href="#" class="btn btn-success btn-lg btn-block" type="button">শব্দ খেলা</a>
+                </div>
               </div>
             </div>
-
+            <div id="collapse1" class="collapse" aria-labelledby="headOne" data-parent="#accordionFAQ">
+              <div class="accordion-content">
+                 <a href="#" class="btn btn-secondary btn-lg btn-block" type="button">Activity Winner List</a>
+              </div>
+            </div>
+            <div id="collapse1" class="collapse" aria-labelledby="headOne" data-parent="#accordionFAQ">
+              <div class="accordion-content">
+                 <a href="#" class="btn btn-secondary btn-lg btn-block" type="button">Word Game</a>
+              </div>
+            </div>
                         <div id="collapse1" class="collapse" aria-labelledby="headOne" data-parent="#accordionFAQ">
               <div class="accordion-content">
                  <a data-toggle="collapse" data-target="#sc1" aria-controls="sc1" aria-expanded="false" class="btn collapsed btn-secondary btn-lg btn-block" type="button">SC</a>
@@ -137,8 +155,14 @@
                    <a href="#" class="btn btn-success btn-lg btn-block" type="button">Science Fact</a>
                        </div>
                        <div id="sc1" class="collapse">
-                   <a href="#" class="btn btn-success btn-lg btn-block" type="button">Science News</a>
+                   <a href="#" class="btn btn-success btn-lg btn-block" type="button">Arduino Quiz</a>
                        </div>
+                       <div id="sc1" class="collapse">
+                        <a href="#" class="btn btn-success btn-lg btn-block" type="button">Space Digest</a>
+                            </div>
+                            <div id="sc1" class="collapse">
+                              <a href="#" class="btn btn-success btn-lg btn-block" type="button">Tech Hunt</a>
+                                  </div>
                        <div id="sc1" class="collapse">
                    <a href="https://forms.gle/hF3xxgug3sGtK1Gr7" class="btn btn-success btn-lg btn-block" type="button">Space Digest</a>
                        </div>                       
@@ -147,7 +171,10 @@
 
                         <div id="collapse1" class="collapse" aria-labelledby="headOne" data-parent="#accordionFAQ">
               <div class="accordion-content">
-                 <a href="#" class="btn btn-secondary btn-lg btn-block" type="button">SDG</a>
+                 <a data-toggle="collapse" data-target="#sdg1" aria-controls="sdg1" aria-expanded="false" class="btn btn-secondary btn-lg btn-block" type="button">SDG</a>
+                 <div id="sdg1" class="collapse">
+                  <a href="#" class="btn btn-success btn-lg btn-block" type="button">Did You Know?</a>
+                      </div>
               </div>
             </div>
 
