--- a/Automation/index.html
+++ b/Automation/index.html
@@ -7,9 +7,8 @@
          <meta name="author" content="">
 
          <title>Automation Dept.&reg; | Apar's Classroom</title>
- 
-         <!-- Bootstrap core CSS -->
-        
+     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@1,600&display=swap">
          <!-- Custom styles for this template -->
@@ -34,20 +33,8 @@
               <a class="nav-link" href="colorpicker/color.html">Color Picker&copy;</a>
             </li>
           </ul>
-<!-- start of freefind search box html -->
+  <button class="btn btn-outline-danger" type="button" onclick="mainApp.logOut();">Log Out</button>
 
-<form class="form-inline mt-2 mt-md-0" action="https://search.freefind.com/find.html" method="get" accept-charset="utf-8" target="_self">
-  <input type="hidden" name="si" value="35965716">
-  <input type="hidden" name="pid" value="r">
-  <input type="hidden" name="n" value="0">
-  <input type="hidden" name="_charset_" value="">
-  <input type="hidden" name="bcd" value="&#247;">
-  <input class="form-control mr-sm-2" placeholder="Search anything :-P" type="text" name="query" size="15"> 
-  <input class="btn btn-success" type="submit" value="Search">
-  </form>
-
-<!-- end of freefind search box html -->
-        </div>
       </nav>
  <br>
  <div class="container">
@@ -115,11 +102,8 @@
     </div>
          </div><!-- /.container -->
 
-         <!-- Bootstrap core JavaScript
-         ================================================== -->
-         <!-- Placed at the end of the document so the pages load faster -->
-                 <!-- JS, Popper.js, and jQuery -->
-
+    <script src="js/firebase.js"></script>
+    <script src="js/main.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
