--- a/story/404.html
+++ b/story/404.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar fixed-top navbar-dark" style="background-image: linear-gradient(to left, #039BE5, #01579b);">
-        <a class="navbar-brand" href="index.html">Story Mode Learning</a>
+        <a class="navbar-brand" href="home.html">Story Mode Learning</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,7 +29,7 @@
         <h3 style="text-align: center;">Sorry, your requested URL have not found 😶</h3>
         <br>
         <div class="button-div">
-        <a href="index.html" class="button"><span>Return Home Page</span></a>
+        <a href="home.html" class="button"><span>Return Home Page</span></a>
         <br><br>
         <h4 style="text-align: center;">Download Now (It's Free)</h4>
         <a class="buttonAd" href="https://cutt.ly/kf2GtNy"><span>Digital Interactive Suchipotro</span></a>
