--- a/story/Botany/home.html
+++ b/story/Botany/home.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/subject-choice.css">
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-dark" style="background-image: linear-gradient(to left, #039BE5, #01579b);">
@@ -24,6 +26,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="../about.html">About Us</a>
               </li>
+              </ul>
+              <button class="btn btn-outline-danger" onclick="mainApp.logOut();">Log Out</button>
           </div>
       </nav>
 
@@ -197,5 +201,25 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="../js/firebase.js"></script>
+<script>
+    var mainApp = {};
+(function() {
+    var firebase = app_firebase;
+var uid = null;
+firebase.auth().onAuthStateChanged(function(user) {
+  if (user) {
+    // User is signed in.
+    uid = user.uid;
+  }else {
+      window.location.replace("../index.html");
+  }
+});
+    function logOut(){
+        firebase.auth().signOut();
+    }
+    mainApp.logOut = logOut;
+})()
+</script>
 </body>
 </html>
