--- a/story/Botany/topics/story-mode/12/story1.html
+++ b/story/Botany/topics/story-mode/12/story1.html
@@ -5,37 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Story</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-   
-    <style type="text/css">
-    body {
-        background-color: #ffe1fe;
-    }
-        .carousel-control-prev-icon, .carousel-control-next-icon  {
-            background-color: #6969697e;
-        }
-        .carousel-indicators {
-            background-color: #6969697e;
-        }
-        img {
-            width: 100%;
-            height: 812px;
-        }
-        video {
-            width: 100%;
-            height: 812px;
-        }
-        .carousel-caption{
-            display: flex; 
-            justify-content: center;
-        }
-        .btn{
-            position: relative;
-            display: inline-block;
-            padding: 10px 20px;
-            border-radius: 15px;
-            margin: 10px;
-        }
-    </style>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+    <link rel="stylesheet" href="../../../../css/story.css">
 </head>
 <body>
     <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="100000">
@@ -102,7 +74,7 @@
             <div class="container">
             <div class="carousel-caption">                        
                 <a href="https://cutt.ly/kf2GtNy" class="btn btn-lg btn-outline-danger" role="button">Download</a>
-                <a href="../../chapter-1.html" class="btn btn-lg btn-outline-warning" role="button">Return</a>
+                <a href="../../chapter-11.html" class="btn btn-lg btn-outline-warning" role="button">Return</a>
             </div>
             </div>
            
@@ -117,6 +89,22 @@
     </a>
 </div>
 </div>
+<script src="../../../../js/firebase.js"></script>
+<script>
+    var mainApp = {};
+(function() {
+    var firebase = app_firebase;
+var uid = null;
+firebase.auth().onAuthStateChanged(function(user) {
+  if (user) {
+    // User is signed in.
+    uid = user.uid;
+  }else {
+      window.location.replace("../../../../index.html");
+  }
+});
+})()
+</script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
