--- a/story/index.html
+++ b/story/index.html
@@ -5,23 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Story Mode Learning App</title>
     <link rel="stylesheet" href="css/splash.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue_grey-orange.min.css">
-    <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-    <style>
-      #googlebtn {
-        margin-bottom: 20px;
-      }
-    </style>
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css">
 </head>
 <body>
     <section id="page-splash">
         <h3 class="logo">Apar's Story Mode<br> Learning App</h3>
         <div>
-          <button id="googlebtn" onclick="GoogleLogin();" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Sign in with Google</button>     
-        </div>
-        <div>
-          <button id="facebookbtn" onclick="facebookLogin();" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Sign in with facebook</button>     
+<div id="firebaseui-auth-container"></div>
+<div id="loader">
+<img src="img/btn/loader.gif" alt="loading....">
+</div>  
         </div>
         <br><br><br>
         <h4>Already signed in?</h4>
@@ -33,22 +30,9 @@
         <h5>By proceeding you're agreeing to our <a href="terms.html">Terms</a> &amp; <a href="privacy.html">Privacy</a> Policies.</h5>
         </div>
       </section>
-<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
 
-<script>
-  var firebaseConfig = {
-    apiKey: "AIzaSyDXbBWXz0I3bSBwY0anr9AdzjUYWrsE_8M",
-    authDomain: "story-mode-learning.firebaseapp.com",
-    databaseURL: "https://story-mode-learning.firebaseio.com",
-    projectId: "story-mode-learning",
-    storageBucket: "story-mode-learning.appspot.com",
-    messagingSenderId: "259152173161",
-    appId: "1:259152173161:web:65b3c9b2a212f589b92af8",
-    measurementId: "G-GMT12B0L63"
-  };
-  firebase.initializeApp(firebaseConfig);
-</script>
+
+<script src="js/firebase.js"></script>
 <script src="js/auth.js"></script>
 </body>
 </html>
