--- a/story/terms.html
+++ b/story/terms.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar fixed-top navbar-dark" style="background-image: linear-gradient(to left, #039BE5, #01579b);">
-        <a class="navbar-brand" href="index.html">Story Mode Learning</a>
+        <a class="navbar-brand" href="home.html">Story Mode Learning</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
