--- a/story/index.html
+++ b/story/index.html
@@ -9,29 +9,26 @@
 <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0&appId=1152515561798223&autoLogAppEvents=1" nonce="eMOFh21r"></script>
 <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css">
 </head>
 <body>
     <section id="page-splash">
-        <h3 class="logo">Apar's Story Mode<br> Learning App</h3>
+        <h3 class="logo">Apar's Story Mode Learning App</h3>
         <div>
 <div id="firebaseui-auth-container"></div>
 <div id="loader">
 <img src="img/btn/loader.gif" alt="loading....">
 </div>  
         </div>
-        <br><br><br>
-        <h4>Already signed in?</h4>
-        <div>
-          <button id="alreadybtn" onclick="alreadyLogin();" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect">Click Here 🥰</button>     
-        </div>
-        <br><br><br>
+        <br>
+        <div class="fb-group" data-href="https://www.facebook.com/groups/784996545201750" data-width="300" data-show-social-context="true" data-show-metadata="false"><blockquote cite="https://www.facebook.com/groups/784996545201750" class="fb-xfbml-parse-ignore">ASG (Apar&#039;s Students Group)</blockquote></div>
+        <br>
         <div class="declearation">
         <h5>By proceeding you're agreeing to our <a href="terms.html">Terms</a> &amp; <a href="privacy.html">Privacy</a> Policies.</h5>
         </div>
       </section>
-
-
 <script src="js/firebase.js"></script>
 <script src="js/auth.js"></script>
 </body>
