--- a/story/about.html
+++ b/story/about.html
@@ -50,7 +50,7 @@
             <a href="https://www.facebook.com/maheyan.mridul"><i class="fab fa-facebook-f"></i></a>
             <a href="https://open.spotify.com/user/31pmhuq3fw4fpbwac5vpnj5wd7l4?si=_LZB_ZH4R4-e3x4YY5JJlA"><i class="fab fa-spotify"></i></a>
             <a href="https://www.instagram.com/maheyan.mridul/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.youtube.com/channel/UCKCSOxlsALUnUib9-oUVzlg"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.youtube.com/c/MaheyanMridul"><i class="fab fa-youtube"></i></a>
             <a href="https://www.linkedin.com/in/maheyan-mridul-177b791b9/"><i class="fab fa-linkedin"></i></a>
           </ul>
         </div>
