--- a/story/about.html
+++ b/story/about.html
@@ -110,6 +110,25 @@
       </div>
       <div class="wrapper">
         <div class="card front-face">
+          <img src="img/about/Mazharul-Islam.jpg">
+        </div>
+        <div class="card back-face">
+          <img src="img/about/Mazharul-Islam.jpg">
+          <div class="info">
+            <div class="title">Mazharul Islam</div>
+            <h5 style="text-align: center;"><strong>Designer</strong></h5>
+            <p>HSC'21,<br><a href="https://www.dmrc.edu.bd/">Dr. Mahbubur Rahman Mollah College</a></p>
+          </div>
+          <ul>
+            <a href="https://www.facebook.com/DhaliMazharul"><i class="fab fa-facebook-f"></i></a>
+            <a href="mailto:mazharul3600@gmail.com"><i class="fab fa-google"></i></a>
+            <a href="https://www.linkedin.com/in/mazharul-islam-7851461b2"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/kasher_bori/"><i class="fab fa-instagram"></i></a>
+          </ul>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="card front-face">
           <img src="img/about/asad.jpeg">
         </div>
         <div class="card back-face">
