--- a/poster/index.html
+++ b/poster/index.html
@@ -54,11 +54,11 @@
      <br>
              <h2 class="featurette-heading">Assalamu Alaikum</h2> 
              <h3 class="featurette-heading">Check out our Products</h3>
-            <!-- <div class="button-div">
+            <div class="button-div">
              <a href="Poster-Generator/index.html" class="button"><span>Poster Generator</span></a>
              <a href="https://cutt.ly/quiz-gen"><span>Quiz with React Generator</span></a>
              <a href="certificate-generator/home.html"><span>Certificate Generator</span></a>
-            </div> -->
+            </div>
             <br>
 
     
