--- a/e11/highscores.html
+++ b/e11/highscores.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>High Scores</title>
-    <link rel="stylesheet" href="/HSC-Full-Course/Exam-Assets/css/app.css" />
-    <link rel="stylesheet" href="/HSC-Full-Course/Exam-Assets/css/highscores.css" />
+    <link rel="stylesheet" href="https://aparsclassroom.com/HSC-Full-Course/Exam-Assets/css/app.css" />
+    <link rel="stylesheet" href="https://aparsclassroom.com/HSC-Full-Course/Exam-Assets/css/highscores.css" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
         </div>
     </div>
-    <script src="/HSC-Full-Course/Exam-Assets/js/highscores.js"></script>
+    <script src="https://aparsclassroom.com/HSC-Full-Course/Exam-Assets/js/highscores.js"></script>
 </body>
 
 </html>
