--- a/exam/index.html
+++ b/exam/index.html
@@ -17,7 +17,7 @@
             <a class="btn" href="exam.html">Start Exam</a>
             <a class="btn" href="highscores.html">High Scores</a>
             <a class="btn" onclick="close_window()">Close</a>
-            <p class="cred text-center">Contributor : Sabrina Choya</p>
+            <p class="cred text-center">Contributor : Sanjana Hoque </p>
         </div>
     </div>
     <script>
